makes it wor and with good style

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 	padding: 20px;
 	background-image: url("back.jpg");
 	background-size:cover;
-	background-repeat: no-repeat;
+	background-repeat: repeat-y;
 	/* background-color: #060117; */
 }
 .container {
